--- a/day_27/exercises_function.ipynb
+++ b/day_27/exercises_function.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598673415577",
+   "name": "python_defaultSpec_1598850583807",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -809,6 +809,34 @@
     "\n",
     "print(calculate_median([2, 4, 6, 3, 7]))\n",
     "print(calculate_median([9, 4, 6, 3, 7, 2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "12.0\n"
+    }
+   ],
+   "source": [
+    "print(calculate_median([3, 5, 11, 13, 19, 21]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_mode(lst):\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -857,12 +885,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "True\nTrue\n"
+    }
+   ],
    "source": [
+    "# prime numbers are greater than one.\n",
     "def is_prime(num):\n",
-    "    if num "
+    "    if num > 1:\n",
+    "        for i in range(2, num):\n",
+    "            if (num % i) != 0:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "\n",
+    "# something is wrong with the code. Will fix it later, inshaAllah!\n",
+    "print(is_prime(9))\n",
+    "print(is_prime(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is a prime number.\n407 is not a prime number. 11 times 37 is 407.\n"
+    }
+   ],
+   "source": [
+    "# prime numbers are greater than one.\n",
+    "num = int(input('Enter a number: '))    \n",
+    "if num > 1:\n",
+    "    for i in range(2, num):\n",
+    "        if (num % i) == 0:\n",
+    "            print(f\"{num} is not a prime number. {i} times {num//i} is {num}.\")\n",
+    "            break\n",
+    "        elif (num % i) != 0:\n",
+    "            print(f\"{num} is a prime number.\")\n",
+    "else:\n",
+    "    print(f\"{num} is a prime number.\")   # if input number is less than 1, it is not a prime number. \n",
+    "\n",
+    "# something is wrong with the code. Will fix it later, inshaAllah!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**21.** Write a functions which checks if all items are unique in the list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**22.** Write a function which checks if all the items of the list are of the same data type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**23.** Write a function which check if provided variable is a valid python variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**24.**Go to the data folder and access the countries-data.py file.\n",
+    "\n",
+    "- Create a function called the most_spoken_languages in the world. It should return 10 or 20 most spoken languages in the world in descending order.\n",
+    "\n",
+    "- Create a function called the most_populated_countries. It should return 10 or 20 most populated countries in descending order."
    ]
   }
  ]
